[package]
name = "slack-socket-mode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8", features = ["attributes"] }
surf = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tungstenite = "0.12"
async-tungstenite = "0.12"
async-tls = "0.11"
url = "2.2"
futures-util = "0.3"
